partial dev-integrated-config